[gd_scene load_steps=5 format=3 uid="uid://bdtnblxdje0fq"]

[ext_resource type="Texture2D" uid="uid://c1pjgpmaiy43m" path="res://addons/reference_book/Reload.svg" id="1_86on2"]
[ext_resource type="Script" uid="uid://cqrymwntlikwq" path="res://addons/reference_book/resource_loader_ui.gd" id="1_tvsta"]
[ext_resource type="Texture2D" uid="uid://b6n7jyqcya7q2" path="res://addons/reference_book/Load.svg" id="2_tvsta"]
[ext_resource type="Script" uid="uid://cthjn8s1fdr8x" path="res://addons/reference_book/drop_panel.gd" id="3_0vliq"]

[node name="ResourceLoaderUI" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tvsta")

[node name="ResetButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("1_86on2")

[node name="ResDrop" type="MenuButton" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
item_count = 1
popup/item_0/text = "Load..."
popup/item_0/icon = ExtResource("2_tvsta")
popup/item_0/id = 0
script = ExtResource("3_0vliq")

[node name="Button" type="Button" parent="ResDrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="ResDrop/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "<empty>"

[node name="AspRatioBox" type="AspectRatioContainer" parent="ResDrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewTextRect" type="TextureRect" parent="ResDrop/AspRatioBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="LoadButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2_tvsta")
icon_alignment = 1
